--- a/tabs/index.html
+++ b/tabs/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>tab选项卡</title>
-    <link rel="stylesheet" href="./style-plug-in.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
         <div id="notice" class="notice">
