--- a/carousel/index.html
+++ b/carousel/index.html
@@ -19,15 +19,18 @@
                                                             }'>
         <div class="poster-btn poster-prev-btn"></div>
         <ul class="poster-list">
-            <li class="poster-item"><a href="javascript:void(0);"><img src="./图片素材/1.jpg" alt=""/></a></li>
-            <li class="poster-item"><a href="javascript:void(0);"><img src="./图片素材/2.jpg" alt=""/></a></li>
-            <li class="poster-item"><a href="javascript:void(0);"><img src="./图片素材/3.jpg" alt=""/></a></li>
-            <li class="poster-item"><a href="javascript:void(0);"><img src="./图片素材/4.jpg" alt=""/></a></li>
-            <li class="poster-item"><a href="javascript:void(0);"><img src="./图片素材/5.jpg" alt=""/></a></li>
-            <li class="poster-item"><a href="javascript:void(0);"><img src="./图片素材/6.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/1.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/2.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/3.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/4.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/5.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/6.jpg" alt=""/></a></li>
+            <li class="poster-item"><a href="javascript:;"><img src="./图片素材/7.jpg" alt=""/></a></li>
         </ul>
         <div class="poster-btn poster-next-btn"></div>
     </div>
+
+
     <script>
         $(function(){
             Carousel.init($('.J_Poster'));
